--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -2,5 +2,4 @@
 
 <p><%= t('.instruction') %></p>
 
-<p><%= link_to t('.action'), confirmation_url(@resource, confirmation_token: @token, host: ENV['HOST']) %></p>
-
+<p><%= link_to t('.action'), confirmation_url(@resource, confirmation_token: @token) %></p>
